# research_agent

./: .env.example  .gitignore  CONSTITUTION.md  MISSION.md  README.md  agent.py  config.yaml  config.yaml.example  costs.py  dashboard.py  llm.py  pyproject.toml  qe.py  slides.py  supervisor.py  templates.py  tools.py
data/: costs.json  identity.json
data/research/: agent_security_landscape.md  data_asset_analysis.md  implementation_playbook.md  landscape_scan.md  opportunity_analysis.md
static/: index.html
tests/: test_agent.py
topics/10k-remote-income/: identity.json  mission.md  system_prompt.md
topics/10k-remote-income/data/research/: ai_native_opportunities.md  idea_catalog.md  landscape_scan.md  ranked_recommendations.md  revenue_math.md
topics/AI transformation ideas/: identity.json  mission.md  system_prompt.md
topics/AI transformation ideas/data/: costs.json  cycles.jsonl
topics/AI transformation ideas/data/research/: implementation_playbook.md  landscape_scan.md  opportunity_analysis.md  viability_assessment.md
topics/One-Idea-Validation/: agent_config.yaml  agent_parameters.md  identity.json  mission.md
topics/One-Idea-Validation/data/research/: existing_research_summary.md
topics/Reddit Scraper/: identity.json  mission.md  system_prompt.md
topics/_template/: agent_parameters.example.md  mission.example.md
topics/data-play-acquisition/: system_prompt.md
topics/data-play-acquisition/data/: costs.json  cycles.jsonl
topics/micro-saas-opportunities/: agent_config.yaml  agent_parameters.md  identity.json
(+7 files in other folders)
